# GameStringer

./: .env.example  .gitignore  AUTHENTICATION_FIX_FINAL_DOCUMENTATION.md  BUG_REPORT_2026-01-28.md  CHANGELOG.md  CONTRIBUTING.md  FRONTEND_VALIDATION_IMPLEMENTATION.md  GAME_LAUNCH_INTEGRATION.md  GameStringer_Roadmap.md  ISTRUZIONI_TEST.md  LICENSE  MARKETING.md  NOTIFICATION_SETTINGS_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROFILES_SYSTEM_COMPLETION_SUMMARY.md  PROFILE_CLARITY_IMPROVEMENTS.md  PROFILE_LOGIN_FINAL_FIX_2025.md  README.md  README_IT.md  README_OLD.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.3.md  RELEASE_NOTES_v3.2.2_PROFILES_SYSTEM.md  RUST_WARNINGS_CLEANUP_REPORT.md  TASK_11_3_FINAL_REPORT.json  TEST_GUIDE.md  TODO.md  build-log.txt  convert-icon.mjs  create-ico.mjs  decarnation-italian-patch.json  history.md  index-en.html  index-external.html  index.html  launch-desktop.bat  middleware.ts  next.config.js  package-lock.json  package.json  (+34 more)
.cache/: steam-games.json
.cache_old/: steam-games.json
.claude/: settings.local.json
.githooks/: pre-commit
__tests__/: README.md  basic.test.ts
app/: globals.css  layout.tsx  page.tsx  page.tsx.old
components/: advanced-filters.tsx  audio-translation.tsx  community-translations.tsx  context-aware-translation.tsx  custom-sorting.tsx  detailed-statistics.tsx  error-boundary-wrapper.tsx  error-boundary.tsx  game-card.tsx  game-image.tsx  injekt-overlay-config.tsx  injekt-realtime-stats.tsx  injekt-ui-enhanced.tsx  inline-translator.tsx  intelligent-placeholder.tsx  intelligent-search.tsx  lazy-page.tsx  ocr-image-processor.tsx  providers.tsx  responsive-layout.tsx  scan-button.tsx  stats-dashboard.tsx  steam-family-sharing.tsx  store-manager.tsx  theme-provider.tsx  theme-toggle.tsx  translation-batch-editor.tsx  translation-import-dialog.tsx  translation-profile-manager.tsx  translation-recommendation.tsx  translation-search.tsx  translation-stats.tsx  (+2 more)
data/: stores.ts  (+1 more)
src-tauri/: Cargo.toml  check_output.txt  splash.html  tauri.conf.json  tauri.conf.json.backup  tauri.conf.test.json
src-tauri/.cache/: battlenet_credentials.json  gog_credentials.json  itchio_credentials.json  origin_credentials.json  rockstar_credentials.json  ubisoft_credentials.json
src-tauri/capabilities/: app-events.json  default.json
src-tauri/examples/: test_rai_pal.rs
src-tauri/icons/: README.md
src-tauri/profiles/: default.json
src-tauri/profiles/profiles/: profile_20864d02-10b5-482c-8aba-abf7b4782bcc.json.enc  profile_23ca6b51-5c1e-4c5f-990c-5d8c7865f393.json.enc  profile_4de988be-fda0-4da1-9dfa-4c808f64531f.json.enc  profile_5803506d-1a76-4f14-9465-84b75a8020cd.json.enc  profile_8978bf18-f8c0-40b3-8b5b-aa36ec9245a6.json.enc  profile_8dfc60e1-8c45-4a6c-a153-00a93d780859.json.enc  profile_a82752c3-c0a8-4388-a144-ffed22a127c2.json.enc  profile_c49446a7-132a-4cc2-8f50-a88f4e364cca.json.enc  profile_d957a225-6fa6-4a00-8aef-89d01253313e.json.enc  profile_e40ee48c-de0d-43e9-beca-b497edc3c09c.json.enc  profiles.index
src-tauri/profiles/settings/: global.json
src-tauri/src/: advanced_ocr.rs  anti_cheat.rs  cache_manager.rs  engine_detector.rs  error_manager.rs  injekt.rs  intelligent_cache.rs  lib.rs  low_latency_optimizer.rs  main.rs  main.rs.backup  main_minimal.rs  memory_audit.rs  models.rs  multi_process_injekt.rs  offline_translation.rs  performance_optimizer.rs  process_utils.rs  simple_test.rs  test_commands.rs  test_rai_pal.rs  translation_backends.rs  translation_logger.rs  translation_pipeline.rs
src-tauri/src/activity_history/: mod.rs  models.rs  storage.rs
src-tauri/src/commands/: activity_history.rs  advanced_ocr.rs  amazon.rs  anti_cheat.rs  backup.rs  batch_processor.rs  battlenet.rs  community_hub.rs  context_injection.rs  dlc_manager.rs  epic.rs  epic_enhanced.rs  export_formats.rs  extensions.rs  file_manager.rs  game_dictionaries.rs  games.rs  global_hotkeys.rs  glossary.rs  gog.rs  hltb_manager.rs  image_cache.rs  injekt.rs  itchio.rs  launcher.rs  library.rs  load_order.rs  low_latency_optimizer.rs  migration.rs  mod.rs  mod_profiles.rs  notifications.rs  notifications_disabled.rs  offline_translation.rs  origin.rs  patches.rs  performance.rs  profile_credentials.rs  profile_settings.rs  profile_store_integration.rs  (+25 more)
src-tauri/src/notifications/: access_control.rs  cleanup.rs  integration_test.rs  manager.rs  mod.rs  models.rs  profile_event_handler.rs  storage.rs  tests.rs
src-tauri/src/notifications_disabled/: access_control.rs  auto_event_integration.rs  cleanup.rs  cleanup_tests.rs  errors.rs  event_system.rs  event_system_tests.rs  manager.rs  manager_tests.rs  mod.rs  models.rs  performance.rs  profile_integration.rs  profile_integration_tests.rs  profile_isolation_tests.rs  storage.rs  storage.rs.backup  storage_tests.rs  system_event_handler.rs  system_event_integration.rs  system_event_tests.rs  tests.rs  validation_tests.rs
src-tauri/src/ocr_translator/: mod.rs  ocr_engine.rs  overlay.rs  retro_preprocessor.rs  screen_capture.rs
src-tauri/src/profiles/: cleanup.rs  compression.rs  credential_manager.rs  encryption.rs  end_to_end_tests.rs  errors.rs  integration_tests.rs  manager.rs  mod.rs  models.rs  rate_limiter.rs  secure_memory.rs  settings_manager.rs  settings_tests.rs  storage.rs  tests.rs  validation.rs
src-tauri/src/translation_bridge/: dictionary_engine.rs  mod.rs  protocol.rs  shared_memory_ipc.rs
src-tauri/src/ue_translator/: injector.rs  ipc_bridge.rs  mod.rs  translation_cache.rs
src-tauri/src/unity_bundle/: mod.rs  parser.rs  string_table.rs
src-tauri/tests/: notification_tests.rs  simple_notification_test.rs
ue-translator-dll/: CMakeLists.txt  README.md
ue-translator-dll/src/: ipc_client.h  main.cpp  text_hooks.h
unity-translator-dll/: CMakeLists.txt
unity-translator-dll/src/: ipc_client.h  main.cpp
unreal-translator/hook-dll/: CMakeLists.txt
unreal-translator/hook-dll/include/: cache.h  hooks.h  ipc.h  translator.h  ue_types.h  utils.h
unreal-translator/hook-dll/src/: cache.cpp  dllmain.cpp  hooks.cpp  ipc.cpp  translator.cpp  utils.cpp
(+722 files in other folders)
